--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 320px;
+	min-height: 90px; /* - seems to be the lower limit. Moves the home page header up. JH */
     margin: var(--gap) 0 calc(var(--gap) * 2) 0;
 }
 
